<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/title3"
        android:textSize="15sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sakhalinButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/sakhalin" />

        <RadioButton
            android:id="@+id/yuzhnuyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/yuzhnuy" />

        <RadioButton
            android:id="@+id/severnuyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/severnuy" />
    </RadioGroup>

    <Button
        android:id="@+id/resultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/results"
        android:textAllCaps="false" />

</LinearLayout>